src/objects/BMCServiceDesk__SYSQVFolder__c.object
<CustomObject>
    <description>This object allows you to store data for the QuickView folders.</description>
    <fields>
        <fullName>BMCServiceDesk__Export__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to tag a record for exporting QVFolder from RF QV Migration package.</description>
        <inlineHelpText>Select this field to allow the record to be exported from the RF QV Migration Pentaho package.</inlineHelpText>
        <label>Tag for Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__folderName__c</fullName>
        <label>Folder Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__parentFolder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKParentFolder</label>
        <referenceTo>BMCServiceDesk__SYSQVFolder__c</referenceTo>
        <relationshipLabel>SYSQVFolders</relationshipLabel>
        <relationshipName>SYSQVFolders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quickview Folders</label>
    <nameField>
        <displayFormat>QVFolder-{0000}</displayFormat>
        <label>SYSQVFolder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYSQVFolders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>